--- a/css/css.css
+++ b/css/css.css
@@ -59,7 +59,7 @@ body{
 }
 
 .logoOne{
-    padding: 2%;s
+    padding: 2%;
 }
 
 .nav > li > a {
@@ -79,8 +79,68 @@ body{
 
 .topBar {
     background-color: #8888 !important;
+    transition: color .7s;
 }
 
 .navbar-brand{
     padding: 10px 15px;
+}
+
+.headerMargin{
+    margin-top: 15%;
+}
+
+.txtHeaderOne{
+    color: #c5c3c0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.8em;
+    font-weight: 400;
+}
+
+.txtHeaderTwo{
+    font-family: 'GTWalsheimProBlack';
+    font-size: 4.5em;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: -12px;
+}
+
+.txtHeaderThree{
+    color: #c5c3c0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 2em;
+    margin-top: -15px;
+    font-weight: 300;
+}
+
+.txtHeaderFour{
+    color: #c5c3c0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.3em;
+    font-weight: 300;
+}
+
+.btn-lg, .btn-group-lg > .btn {
+    padding: 10px 50px;
+}
+
+.btnMargin {
+    margin-top: 6%;
+    margin-bottom: 14%;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #009fe3;
+    border-color: #009fe3;
+}
+
+.btn-outline-primary {
+    border-color: #202323;
+    background: transparent;
+    color: #fff;
 }
