--- a/css/css.css
+++ b/css/css.css
@@ -1,52 +1,54 @@
 @font-face {
     font-family: 'GTWalsheimProUltraLight';
-    src: url('fonts/GTWalsheimProUltraLight.eot');
-    src: url('fonts/GTWalsheimProUltraLight.eot?#iefix') format('embedded-opentype'),
-        url('fonts/GTWalsheimProUltraLight.woff2') format('woff2'),
-        url('fonts/GTWalsheimProUltraLight.woff') format('woff'),
-        url('fonts/GTWalsheimProUltraLight.ttf') format('truetype'),
-        url('fonts/GTWalsheimProUltraLight.svg#GTWalsheimProUltraLight') format('svg');
+    src: url('../fonts/GTWalsheimProUltraLight.eot');
+    src: url('../fonts/GTWalsheimProUltraLight.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GTWalsheimProUltraLight.woff2') format('woff2'),
+        url('../fonts/GTWalsheimProUltraLight.woff') format('woff'),
+        url('../fonts/GTWalsheimProUltraLight.ttf') format('truetype'),
+        url('../fonts/GTWalsheimProUltraLight.svg#GTWalsheimProUltraLight') format('svg');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'GTWalsheimProBlack';
-    src: url('fonts/GTWalsheimProBlack.eot');
-    src: url('fonts/GTWalsheimProBlack.eot?#iefix') format('embedded-opentype'),
-        url('fonts/GTWalsheimProBlack.woff2') format('woff2'),
-        url('fonts/GTWalsheimProBlack.woff') format('woff'),
-        url('fonts/GTWalsheimProBlack.ttf') format('truetype'),
-        url('fonts/GTWalsheimProBlack.svg#GTWalsheimProBlack') format('svg');
+    src: url('../fonts/GTWalsheimProBlack.eot');
+    src: url('../fonts/GTWalsheimProBlack.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GTWalsheimProBlack.woff2') format('woff2'),
+        url('../fonts/GTWalsheimProBlack.woff') format('woff'),
+        url('../fonts/GTWalsheimProBlack.ttf') format('truetype'),
+        url('../fonts/GTWalsheimProBlack.svg#GTWalsheimProBlack') format('svg');
     font-weight: 900;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'GTWalsheimProMedium';
-    src: url('fonts/GTWalsheimProMedium.eot');
-    src: url('fonts/GTWalsheimProMedium.eot?#iefix') format('embedded-opentype'),
-        url('fonts/GTWalsheimProMedium.woff2') format('woff2'),
-        url('fonts/GTWalsheimProMedium.woff') format('woff'),
-        url('fonts/GTWalsheimProMedium.ttf') format('truetype'),
-        url('fonts/GTWalsheimProMedium.svg#GTWalsheimProMedium') format('svg');
+    src: url('../fonts/GTWalsheimProMedium.eot');
+    src: url('../fonts/GTWalsheimProMedium.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GTWalsheimProMedium.woff2') format('woff2'),
+        url('../fonts/GTWalsheimProMedium.woff') format('woff'),
+        url('../fonts/GTWalsheimProMedium.ttf') format('truetype'),
+        url('../fonts/GTWalsheimProMedium.svg#GTWalsheimProMedium') format('svg');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'GTWalsheimProBold';
-    src: url('fonts/GTWalsheimProBold.eot');
-    src: url('fonts/GTWalsheimProBold.eot?#iefix') format('embedded-opentype'),
-        url('fonts/GTWalsheimProBold.woff2') format('woff2'),
-        url('fonts/GTWalsheimProBold.woff') format('woff'),
-        url('fonts/GTWalsheimProBold.ttf') format('truetype'),
-        url('fonts/GTWalsheimProBold.svg#GTWalsheimProBold') format('svg');
+    src: url('../fonts/GTWalsheimProBold.eot');
+    src: url('../fonts/GTWalsheimProBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/GTWalsheimProBold.woff2') format('woff2'),
+        url('../fonts/GTWalsheimProBold.woff') format('woff'),
+        url('../fonts/GTWalsheimProBold.ttf') format('truetype'),
+        url('../fonts/GTWalsheimProBold.svg#GTWalsheimProBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
+
+@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,700'); /* font-family: 'PT Serif', serif; */
 
 body{
     font-family: 'Montserrat', sans-serif;
@@ -67,6 +69,11 @@ body{
     text-transform: uppercase;
     font-weight: 300;
 }
+.navOne > li > a {
+    color:#2c2d87;
+    text-transform: uppercase;
+    font-weight: 300;
+}
 
 .nav > li > a:hover{
     background-color: transparent;   
@@ -78,8 +85,7 @@ body{
 }
 
 .topBar {
-    background-color: #8888 !important;
-    transition: color .7s;
+    background-color: #f9f8f6 !important;
 }
 
 .navbar-brand{
@@ -143,4 +149,51 @@ body{
     border-color: #202323;
     background: transparent;
     color: #fff;
+}
+
+/*  O Filme  */
+
+.bgFilme{
+    background-image: url(../images/bgFilme.jpg);
+    background-position: center top;
+    background-size: cover;
+}
+
+.txtFilmeOne{
+    font-family: 'GTWalsheimProBlack';
+    color: #2c2d87;
+    font-size: 4.5em;
+}
+
+.txtFilmeOneB{
+    font-family: 'GTWalsheimProUltraLight';
+}
+
+.marginFilme{
+    margin-top: 20%;
+    margin-bottom: 3%;
+}
+
+.txtFilmeTwo{
+    color: #4f5362;
+    font-size: 1.5em;
+}
+
+.marginFilmeB {
+    border-top: solid 3px rgba(193, 193, 193, 0.30);
+    padding-top: 5%;
+    margin-bottom: 10%;
+}
+
+.txtFilmeThree{
+    color: #222328;
+    font-size: 1em;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.txtFilmeFour{
+    color: #4f5362;
+    font-size: 1.2em;
+    font-family: 'PT Serif', serif;
 }
