--- a/css/css.css
+++ b/css/css.css
@@ -197,3 +197,37 @@ body{
     font-size: 1.2em;
     font-family: 'PT Serif', serif;
 }
+
+/*  Characters  */
+
+.characters{
+    background-image: url(../images/bgCharacters.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.txtCharactersOne{
+    font-family: 'GTWalsheimProBlack';
+    text-align: center;
+    color: #fff;
+    font-size: 1.7em;
+}
+
+.txtCharactersTwo{
+    font-family: 'PT Serif', serif;
+    color: #fff;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.marginCharacters{
+    margin-top: 15%;
+    margin-bottom: 15%;
+}
+
+@media screen and (min-width: 768px){
+    .carousel-indicators {
+        bottom: -30px;
+    }
+}
