--- a/css/css.css
+++ b/css/css.css
@@ -398,3 +398,38 @@ body{
     color: #4f536278;
     padding: 12% 10% 8% 10%;
 }
+
+.marginFooter{
+    margin-top: 10%;
+    margin-bottom: 4%;
+}
+
+footer ul{
+    list-style: none;
+	margin: 0;
+    padding: 0;
+}
+
+footer li{
+    display: inline;
+    padding: 4.5%;
+    font-size: 2.0em;
+}
+
+.socialIcon{
+    text-align: center;
+}
+
+footer a {
+    color: #a7a9b0;
+}
+
+.txtFooter{
+    color: #4f536278;
+    padding: 12% 10% 8% 10%; 
+    text-align: center;   
+}
+
+.btnOne{
+    cursor: pointer;
+}
